Began page creation
• Created header
• Added default colors
• Added default font sizing
• Added animated signature
• Set font to Inter

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,185 @@
-body {
-  background-color: rgb(204, 239, 255);
-  color: rgb(27, 31, 31);
+:root {
+  --font-3xsmall: 0.79rem;
+  --font-2xsmall: 0.889rem;
+  --font-xsmall: 1rem;
+  --font-small: 1.125rem;
+  --font-medium: 1.266rem;
+  --font-large: 1.424rem;
+  --font-xlarge: 1.602rem;
+  --font-2xlarge: 1.802rem;
+  --font-3xlarge: 2.027rem;
+  --font-4xlarge: 2.281rem;
+}
+@media only screen and (min-width: 420px) {
+  :root {
+    --font-3xsmall: 0.694rem;
+    --font-2xsmall: 0.833rem;
+    --font-xsmall: 1rem;
+    --font-small: 1.2rem;
+    --font-medium: 1.44rem;
+    --font-large: 1.728rem;
+    --font-xlarge: 2.074rem;
+    --font-2xlarge: 2.488rem;
+    --font-3xlarge: 2.986rem;
+    --font-4xlarge: 3.583rem;
+  }
+}
+@media only screen and (min-width: 768px) {
+  :root {
+    --font-3xsmall: 0.64rem;
+    --font-2xsmall: 0.8rem;
+    --font-xsmall: 1rem;
+    --font-small: 1.25rem;
+    --font-medium: 1.563rem;
+    --font-large: 1.953rem;
+    --font-xlarge: 2.441rem;
+    --font-2xlarge: 3.052rem;
+    --font-3xlarge: 3.815rem;
+    --font-4xlarge: 4.768rem;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  :root {
+    --font-3xsmall: 0.563rem;
+    --font-2xsmall: 0.75rem;
+    --font-xsmall: 1rem;
+    --font-small: 1.333rem;
+    --font-medium: 1.777rem;
+    --font-large: 2.369rem;
+    --font-xlarge: 3.157rem;
+    --font-2xlarge: 4.209rem;
+    --font-3xlarge: 5.61rem;
+    --font-4xlarge: 7.492rem;
+  }
+}
+
+body, button {
+  font-family: Inter, Arial, Helvetica, sans-serif;
+  font-weight: 500;
+}
+
+h1 {
+  font-weight: 850;
+}
+
+h2, h3, h4, h5, h6 {
+  font-weight: 700;
+}
+
+strong {
+  font-weight: 700;
+}
+
+html {
+  font-size: 100%;
+} /* 16px */
+h1 {
+  font-size: var(--font-3xlarge);
+}
+
+h2 {
+  font-size: var(--font-2xlarge);
+}
+
+h3 {
+  font-size: var(--font-xlarge);
+}
+
+h4 {
+  font-size: var(--font-large);
+}
+
+h5 {
+  font-size: var(--font-medium);
+}
+
+h6 {
+  font-size: var(--font-small);
+}
+
+p {
+  font-size: var(--font-xsmall);
+}
+
+small {
+  font-size: var(--font-2xsmall);
+}
+
+/***********************************************************************************/
+/* General
+/***********************************************************************************/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Inter, Helvetica, sans-serif;
+  color: black;
+}
+*::-moz-selection {
+  background-color: hsl(44, 100%, 50%);
+}
+*::selection {
+  background-color: hsl(44, 100%, 50%);
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(0, 0%, 95%);
+  height: min(800px, 95vh);
+  width: 100%;
+}
+header #signature {
+  width: 18em;
+}
+
+/***********************************************************************************/
+/* Main
+/***********************************************************************************/
+main {
+  padding: 2em 1em;
+}
+main h1 {
+  font-size: var(--font-2xlarge);
+  font-weight: 600;
+  line-height: 85%;
+  background-color: hsl(44, 100%, 50%);
+  display: inline-block;
+  padding: 0.2em;
+  margin-bottom: 1.5rem;
+}
+main h1::-moz-selection, main h1 > span::-moz-selection {
+  background-color: transparent;
+  color: white;
+}
+main h1::selection, main h1 > span::selection {
+  background-color: transparent;
+  color: white;
+}
+main h1 > span {
+  display: block;
+  font-size: calc(var(--font-2xlarge) * 1.174);
+}
+main h2 {
+  font-size: var(--font-large);
+  font-weight: 400;
+}
+main > section {
+  margin: auto;
+  max-width: 1000px;
+}
+
+/***********************************************************************************/
+/* Footer
+/***********************************************************************************/
+footer {
+  padding: 2em 0;
+  background-color: hsl(0, 0%, 95%);
+}
+footer > div {
+  display: flex;
+  gap: 3em;
+  margin: 0 auto;
+  justify-content: center;
 }/*# sourceMappingURL=style.css.map */
