Completed website skeleton
• Added navbar
• Changed cursor appearance (yellow circle)
• Completed AnswerIt presentation
• Sped up welcome signature
• Fixed footer margin issues for small devices
• Other minor changes

--- a/css/dep/_colors.scss
+++ b/css/dep/_colors.scss
@@ -1,9 +1,8 @@
-$col-bg-2: hsl(0, 0%, 95%);
 $col-normal: black;
-$col-bg: white;
+$col-white: white;
+$col-gray: hsl(0, 0%, 95%);
+$col-gray2: hsl(0, 0%, 80%);
+$col-gray6: hsl(0, 0%, 40%);
 $col-primary: hsl(44, 100%, 50%);
-$col-primary30: hsl(44, 100%, 50%, 0.3);
 $col-secondary: hsl(297, 78%, 75%);
-$col-secondary30: hsla(297, 78%, 75%, 0.3);
 $col-accent: hsl(341, 78%, 65%);
-$col-accent30: hsla(341, 78%, 65%, 0.3);
