--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,3 +1,5 @@
+@import url("https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-rounded/css/uicons-bold-rounded.css");
+@import url("https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css");
 :root {
   --font-3xsmall: 0.79rem;
   --font-2xsmall: 0.889rem;
@@ -137,15 +139,19 @@ html {
   background-color: hsl(44, 100%, 50%);
 }
 
-a {
+a, a > i {
   color: hsl(341, 78%, 65%);
 }
-a:hover {
+a:hover, a > i:hover {
   color: #710e2e;
 }
 a.anchor {
   position: relative;
-  top: -5rem;
+  top: -8rem;
+}
+
+.rndCrn {
+  border-radius: 5px;
 }
 
 header {
@@ -154,6 +160,7 @@ header {
   margin-bottom: 4em;
 }
 header #banniere-construction {
+  z-index: 100;
   position: fixed;
   width: 100%;
   height: var(--decalage-construction);
@@ -164,12 +171,17 @@ header #banniere-construction {
   padding: 0 1em;
 }
 header #banniere-construction p {
+  line-height: 75%;
+}
+header #banniere-construction * {
   margin-left: auto;
 }
-header #banniere-construction p:nth-of-type(2) {
+header #banniere-construction i {
+  padding-top: 0.2em;
   cursor: pointer;
 }
 header nav {
+  z-index: 100;
   top: var(--decalage-construction);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
@@ -273,50 +285,27 @@ header #signatureC #signature::selection {
 /* Main
 /***********************************************************************************/
 main {
+  overflow: hidden;
   padding: 2em 1em;
-  /*
-  h1 {
-      font-size: var(--font-2xlarge);
-      font-weight: 600;
-      line-height: 85%;
-      background-color: $col-primary;
-      display: inline-block;
-      // padding: 0.2em;
-      @include small-box-border;
-      &::selection, >span::selection {
-          background-color: transparent;
-          color: $col-white;
-      }
-      >span {
-          display: block;
-          font-size: calc(var(--font-2xlarge) * 1.174);
-      }
-      margin-bottom: 1.5rem;
-  }
-  */
 }
 main .ytVideo {
   aspect-ratio: 16/9;
 }
-main .expandContainer {
-  display: flex;
-  justify-content: center;
-}
-main .expandContainer > div {
-  flex-shrink: 0;
-  width: min(150%, 100vw - 4em);
-}
-main .expandContainer > div video, main .expandContainer > div .ytVideo {
-  width: 100%;
-}
 main > section {
   margin: auto;
-  max-width: 700px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 4em;
+  margin-bottom: var(--font-xlarge);
+  max-width: 700px;
 }
-main > section p, main > section li {
+main > section:last-of-type {
+  margin-bottom: 0;
+}
+main > section:last-of-type > article:last-of-type {
+  margin-bottom: 0;
+}
+main > section p,
+main > section li {
   font-size: var(--font-medium);
 }
 main > section li {
@@ -361,23 +350,118 @@ main > section br {
   height: 2em;
 }
 main > section > article {
-  align-self: end;
+  align-self: center;
   width: calc(100% - 2em);
-  margin-bottom: 4em;
+  margin-bottom: var(--font-xlarge);
+}
+main > section > article .text {
+  margin-left: 1rem;
+}
+main > section > article .expandContainer {
+  align-self: center;
+  display: flex;
+  justify-content: center;
+}
+main > section > article .expandContainer > div {
+  flex-shrink: 0;
+  width: min(150%, 100vw - 4em);
+}
+main > section > article .expandContainer > div video,
+main > section > article .expandContainer > div .ytVideo {
+  width: 100%;
+}
+main > section > article .expandContainer.forImages {
+  margin: -1.5rem 0;
+}
+main > section > article .expandContainer.forImages > div {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  overflow: hidden;
+  width: 100vw;
+  padding: 0 2rem;
+}
+main > section > article .expandContainer.forImages > div .overlay {
+  position: absolute;
+  background: linear-gradient(90deg, white 2%, rgba(0, 0, 0, 0) 15%, rgba(0, 0, 0, 0) 85%, white 98%);
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
+}
+main > section > article .expandContainer.forImages > div i {
+  position: absolute;
+  font-size: var(--font-large);
+  color: rgba(0, 0, 0, 0.5);
+  transition: color 0.1s ease;
+  cursor: pointer;
+  z-index: 2;
+}
+main > section > article .expandContainer.forImages > div i#carousel-back {
+  left: 2rem;
+}
+main > section > article .expandContainer.forImages > div i#carousel-next {
+  right: 2rem;
+}
+main > section > article .expandContainer.forImages > div i:hover {
+  color: black;
+}
+main > section > article .expandContainer.forImages > div .carousel {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  height: 50.625vw;
+}
+@media only screen and (min-width: 768px) {
+  main > section > article .expandContainer.forImages > div .carousel {
+    height: calc(31.246875vw - 0.5rem);
+  }
+}
+main > section > article .expandContainer.forImages > div .carousel .imgContainer {
+  height: calc(100% - 3rem);
+  transition: height 0.3s ease;
+  box-shadow: black 0 0 1.5rem;
+  margin: 1.5rem 0;
+  background-color: hsl(0, 0%, 95%);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  aspect-ratio: 16/9;
+}
+@media only screen and (min-width: 768px) {
+  main > section > article .expandContainer.forImages > div .carousel .imgContainer {
+    height: calc(90% - 3rem);
+  }
+  main > section > article .expandContainer.forImages > div .carousel .imgContainer:nth-of-type(2):hover {
+    height: calc(100% - 3rem);
+  }
 }
 
 /***********************************************************************************/
 /* Footer
 /***********************************************************************************/
 footer {
-  padding: 2em 1em;
+  padding: 1em;
   background-color: hsl(0, 0%, 95%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.6em;
+}
+footer *:not(a, i) {
+  color: rgba(0, 0, 0, 0.5);
 }
 footer > div {
   gap: 1em;
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
+}
+footer i {
+  font-size: var(--font-medium);
 }
 footer a {
   text-decoration: none;
