--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -2,6 +2,8 @@
 @import "dep/colors";
 @import "dep/misc";
 @import "dep/keyframes";
+@import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-rounded/css/uicons-bold-rounded.css');
+@import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css');
 
 /***********************************************************************************/
 /* General
@@ -30,17 +32,24 @@ html {
 }
 
 a {
-    color: $col-accent;
-    &:hover {
-        color: darken($col-accent, 40%);
+    &, >i {
+        color: $col-accent;
+
+        &:hover {
+            color: darken($col-accent, 40%);
+        }
     }
 
     &.anchor {
         // display: block;
         position: relative;
-        top: -5rem;
+        top: -8rem;
         // visibility: hidden;
     }
+}
+
+.rndCrn {
+    border-radius: 5px;
 }
 
 header {
@@ -49,6 +58,7 @@ header {
     margin-bottom: 4em;
 
     #banniere-construction {
+        z-index: 100;
         position: fixed;
         width: 100%;
         height: var(--decalage-construction);
@@ -60,14 +70,19 @@ header {
         padding: 0 1em;
 
         p {
+            line-height: 75%;
+        }
+        * {
             margin-left: auto;
-            &:nth-of-type(2) {
-                cursor: pointer;
-            }
+        }
+        i {
+            padding-top: 0.2em;
+            cursor: pointer;
         }
     }
 
     nav {
+        z-index: 100;
         top: var(--decalage-construction);
         backdrop-filter: blur(5px);
         width: 100%;
@@ -78,6 +93,7 @@ header {
         justify-content: space-between;
         align-items: center;
         flex-wrap: wrap;
+
         @media only screen and (max-width: #{$screenw-m - 1}) {
             justify-content: center;
         }
@@ -89,6 +105,7 @@ header {
             transition: opacity 0.2s ease;
             margin: 0.5rem;
         }
+
         &:hover>* {
             opacity: 1;
         }
@@ -99,10 +116,11 @@ header {
                 text-align: center;
                 margin-bottom: 0;
             }
+
             font-size: 1em;
             line-height: 85%;
             text-transform: uppercase;
-            
+
             >a {
                 font-weight: 800;
                 transition-property: font-weight, color;
@@ -110,15 +128,18 @@ header {
                 transition-timing-function: ease;
                 text-decoration: none;
                 color: $col-normal;
+
                 &:hover {
                     font-weight: 900;
                     // letter-spacing: 0.05em;
                     color: $col-accent;
                 }
+
                 &::selection {
                     background-color: transparent;
                     color: $col-primary;
                 }
+
                 >span {
                     display: block;
                 }
@@ -129,9 +150,11 @@ header {
             @media only screen and (max-width: #{$screenw-m - 1}) {
                 justify-content: center;
             }
+
             display: flex;
             flex-wrap: wrap;
             height: 100%;
+
             >li {
                 margin: 0 1em;
                 font-size: var(--font-2xsmall);
@@ -141,6 +164,7 @@ header {
                 >a {
                     text-decoration: none;
                     color: $col-normal;
+
                     &:hover {
                         color: $col-accent;
                     }
@@ -159,6 +183,7 @@ header {
 
         #signature {
             width: min(18em, calc(100vw - 2rem));
+
             &::selection {
                 background-color: transparent;
             }
@@ -171,55 +196,32 @@ header {
 /***********************************************************************************/
 
 main {
+    overflow: hidden;
     $padding: 2em;
     padding: $padding 1em;
+
     .ytVideo {
         aspect-ratio: 16/9;
     }
-    // Currently useless
-    /*
-    h1 {
-        font-size: var(--font-2xlarge);
-        font-weight: 600;
-        line-height: 85%;
-        background-color: $col-primary;
-        display: inline-block;
-        // padding: 0.2em;
-        @include small-box-border;
-        &::selection, >span::selection {
-            background-color: transparent;
-            color: $col-white;
-        }
-        >span {
-            display: block;
-            font-size: calc(var(--font-2xlarge) * 1.174);
-        }
-        margin-bottom: 1.5rem;
-    }
-    */
-    .expandContainer {
-        display: flex;
-        justify-content: center;
-        >div {
-            flex-shrink: 0;
-            width: min(150%, 100vw - 2 * $padding);
-            video, .ytVideo {
-                width: 100%;
-            }
-        }
-    }
-
 
     >section {
         margin: auto;
-        max-width: 700px;
         display: flex;
         flex-direction: column;
-        margin-bottom: 4em;
+        margin-bottom: var(--font-xlarge);
+        &:last-of-type {
+            margin-bottom: 0;
+            >article:last-of-type {
+                margin-bottom: 0;
+            }
+        }
+        max-width: 700px;
 
-        p, li {
+        p,
+        li {
             font-size: var(--font-medium);
         }
+
         li {
             margin-left: 1em;
         }
@@ -230,6 +232,7 @@ main {
             font-weight: 400;
             margin-bottom: 1.2em;
         }
+
         h3 {
             // margin-bottom: 0.2em;
             text-transform: uppercase;
@@ -239,15 +242,18 @@ main {
 
             mark {
                 background-color: $col-primary;
+
                 &::selection {
                     color: $col-primary;
                     background-color: $col-normal;
                 }
             }
+
             &+p {
                 margin-top: 1em;
             }
         }
+
         h4 {
             margin-top: 1.5em;
             margin-bottom: 0.15em;
@@ -263,9 +269,102 @@ main {
         }
 
         >article {
-            align-self: end;
+            align-self: center;
             width: calc(100% - $padding);
-            margin-bottom: 4em;
+            margin-bottom: var(--font-xlarge);
+
+            .text {
+                margin-left: 1rem;
+            }
+
+            .expandContainer {
+                align-self: center;
+                display: flex;
+                justify-content: center;
+
+                >div {
+                    flex-shrink: 0;
+                    width: min(150%, 100vw - 2 * $padding);
+
+                    video,
+                    .ytVideo {
+                        width: 100%;
+                    }
+                }
+
+                &.forImages {
+                    $taille-ombre: 1.5rem;
+                    margin: -$taille-ombre 0;
+                    >div {
+                        position: relative;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        gap: 1rem;
+                        overflow: hidden;
+                        width: 100vw;
+                        padding: 0 2rem;
+
+                        .overlay {
+                            position: absolute;
+                            background: linear-gradient(90deg, $col-white 2%, rgba(0,0,0,0) 15%, rgba(0,0,0,0) 85%, $col-white 98%);
+                            width: 100%;
+                            height: 100%;
+                            z-index: 1;
+                            pointer-events: none;
+                        }
+                        i {
+                            position: absolute;
+                            &#carousel-back {
+                                left: 2rem;
+                            }
+                            &#carousel-next {
+                                right: 2rem;
+                            }
+                            font-size: var(--font-large);
+                            color: rgba($color: $col-normal, $alpha: 0.5);
+                            transition: color 0.1s ease;
+                            &:hover {
+                                color: $col-normal;
+                            }
+                            cursor: pointer;
+                            z-index: 2;
+                        }
+
+                        .carousel {
+                            width: 100%;
+                            $gap: 1rem;
+                            display: flex;
+                            justify-content: center;
+                            gap: $gap;
+
+                            height: calc(90vw * 9 / 16);
+                            @media only screen and (min-width: #{$screenw-m}) {
+                                height: calc(55.55vw * 9 / 16 - $gap / 2);
+                            }
+
+
+                            .imgContainer {
+                                height: calc(100% - 2 * $taille-ombre);
+                                transition: height 0.3s ease;
+                                box-shadow: black 0 0 $taille-ombre;
+                                margin: $taille-ombre 0;
+                                @media only screen and (min-width: #{$screenw-m}) {
+                                    height: calc(90% - 2 * $taille-ombre);
+                                    &:nth-of-type(2):hover {
+                                        height: calc(100% - 2 * $taille-ombre);
+                                    }
+                                }
+                                background-color: $col-gray;
+                                background-size: contain;
+                                background-repeat: no-repeat;
+                                background-position: center;
+                                aspect-ratio: 16/9;
+                            }
+                        }
+                    }
+                }
+            }
         }
     }
 }
@@ -276,14 +375,25 @@ main {
 /***********************************************************************************/
 
 footer {
-    padding: 2em 1em;
+    padding: 1em;
     background-color: $col-gray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.6em;
+    *:not(a,i) {
+        color: rgba($col-normal, $alpha: 0.5);
+    }
 
     >div {
         gap: 1em;
         display: flex;
         margin: 0 auto;
         justify-content: space-between;
+    }
+
+    i {
+        font-size: var(--font-medium);
     }
 
     a {
