--- a/css/homepage.css
+++ b/css/homepage.css
@@ -344,6 +344,9 @@ main > section h4 {
   text-transform: uppercase;
   font-size: var(--font-small);
 }
+main > section h4.largeText {
+  font-size: var(--font-medium);
+}
 main > section br {
   display: block;
   content: "";
@@ -353,6 +356,12 @@ main > section > article {
   align-self: center;
   width: calc(100% - 2em);
   margin-bottom: var(--font-xlarge);
+}
+main > section > article .facebook-post {
+  margin: 0 auto;
+  display: block;
+  width: 100%;
+  height: 1000px;
 }
 main > section > article .text {
   margin-left: 1rem;
