--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -260,6 +260,9 @@ main {
             color: $col-gray6;
             text-transform: uppercase;
             font-size: var(--font-small);
+            &.largeText {
+                font-size: var(--font-medium);
+            }
         }
 
         br {
@@ -272,6 +275,13 @@ main {
             align-self: center;
             width: calc(100% - $padding);
             margin-bottom: var(--font-xlarge);
+
+            .facebook-post {
+                margin: 0 auto;
+                display: block;
+                width: 100%;
+                height: 1000px;
+            }
 
             .text {
                 margin-left: 1rem;
