--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://cdn-uicons.flaticon.com/2.6.0/uicons-bold-rounded/css/uicons-bold-rounded.css");
 @import url("https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css");
 :root {
@@ -113,8 +114,31 @@ small {
     opacity: 0;
   }
 }
+.facebook-post {
+  margin: 0 auto;
+  display: block;
+  width: 100%;
+  height: calc(820px + 0.75 * (100vw - 724px));
+  max-height: 820px;
+  visibility: hidden;
+}
+.facebook-post.no-text {
+  height: calc(820px + 100vw - 724px);
+}
+.facebook-post.short {
+  height: calc(450px + 0.75 * (100vw - 724px));
+  max-height: 450px;
+}
+
+#message-fb-mobile {
+  display: none;
+}
+#message-fb-mobile > mark {
+  background-color: hsl(341, 78%, 65%);
+}
+
 /***********************************************************************************/
-/* General
+/* Règles générales
 /***********************************************************************************/
 :root {
   --decalage-construction: 2rem;
@@ -150,14 +174,33 @@ a.anchor {
   top: -8rem;
 }
 
+/***********************************************************************************/
+/* Classes réutilisables
+/***********************************************************************************/
 .rndCrn {
   border-radius: 5px;
 }
 
+/***********************************************************************************/
+/* Header
+/***********************************************************************************/
 header {
-  background-color: hsl(0, 0%, 95%);
+  animation-name: fade-out-banner;
+  animation-duration: 1s;
+  animation-delay: 2.2s;
+  animation-fill-mode: both;
   height: min(1080px, 100vh);
   margin-bottom: 4em;
+  position: relative;
+  overflow: hidden;
+}
+@keyframes fade-out-banner {
+  from {
+    background-color: hsl(0, 0%, 95%);
+  }
+  to {
+    background-color: transparent;
+  }
 }
 header #banniere-construction {
   z-index: 100;
@@ -179,6 +222,18 @@ header #banniere-construction * {
 header #banniere-construction i {
   padding-top: 0.2em;
   cursor: pointer;
+}
+header #banner-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  align-self: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -1;
+  filter: brightness(0.3);
 }
 header nav {
   z-index: 100;
@@ -273,6 +328,15 @@ header #signatureC {
 }
 header #signatureC #signature {
   width: min(18em, 100vw - 2rem);
+  animation-name: color-change;
+  animation-duration: 1s;
+  animation-delay: 2.2s;
+  animation-fill-mode: both;
+}
+@keyframes color-change {
+  to {
+    filter: invert(100%);
+  }
 }
 header #signatureC #signature::-moz-selection {
   background-color: transparent;
@@ -352,19 +416,14 @@ main > section br {
   content: "";
   height: 2em;
 }
+main > section .text {
+  margin-left: 1rem;
+}
 main > section > article {
   align-self: center;
   width: calc(100% - 2em);
   margin-bottom: var(--font-xlarge);
-}
-main > section > article .facebook-post {
-  margin: 0 auto;
-  display: block;
-  width: 100%;
-  height: 1000px;
-}
-main > section > article .text {
-  margin-left: 1rem;
+  word-wrap: break-word;
 }
 main > section > article .expandContainer {
   align-self: center;
